# foehn

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
scripts/: ingest_delta.py
src/foehn/: __init__.py  api.py  cli.py  client.py  collections.py  convert.py  download.py  mcp_server.py  stac.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_collections.py  test_convert.py  test_download.py  test_ingest_delta.py  test_mcp_server.py  test_stac.py
tests/fixtures/: climate_normals_sample.txt  smn_meta_parameters.csv  smn_sample.csv
