[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "foehn"
version = "0.2.6"
description = "Download MeteoSwiss Open Government Data and convert to Parquet / Delta tables"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Kay Hendriksen" },
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "polars>=1.0",
]
keywords = ["meteoswiss", "weather", "parquet", "delta", "open-data", "switzerland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kayhendriksen/foehn"
Repository = "https://github.com/kayhendriksen/foehn"
Issues = "https://github.com/kayhendriksen/foehn/issues"

[project.optional-dependencies]
databricks = [
    "polars-lts-cpu>=1.0",
    "pyspark>=4.0,<5.0",
    "delta-spark>=4.0,<5.0",
]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
foehn = "foehn.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "RUF", "A", "PIE", "PERF", "T20"]
ignore = [
    "E731",   # lambda assignment — sometimes fine
    "SIM108", # ternary operator — can hurt readability
    "RUF002", # en dash in docstrings — intentional for ranges
    "RUF003", # en dash in comments — intentional for ranges
]

[tool.ruff.lint.per-file-ignores]
"src/foehn/cli.py" = ["T201"]
"src/foehn/client.py" = ["T201"]
"src/foehn/convert.py" = ["T201"]
"src/foehn/stac.py" = ["T201"]
"scripts/*" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/foehn"]
